[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hibpwned"
version = "1.3.9"
authors = [
  { name="plasticuproject", email="plasticuproject@pm.me" },
]
description = "A human friendly Python API wrapper for haveibeenpwned.com"
readme = "README.md"
keywords = ["hibp", "haveibeenpwned", "api", "wrapper"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Utilities", "Topic :: Utilities"
]
dependencies = ["requests>=2.32.3"]

[project.urls]
"Homepage" = "https://github.com/plasticuproject/hibpwned"
